# faice

./: .gitignore  CODEOWNERS  Makefile  README.md  environment.yml  environment_cluster.yml  environment_faice_2.yml  pyproject.toml  train.sh
code/: .gitignore  Makefile  Training_Diffusion_Models.ipynb  args.py  ddpm.py  diffusion_pipeline.py  experiments.sh  main.py  pyproject.toml  train.sh  train_butterfly.py  train_face.py
code/conf/: __init__.py  log_conf.py  training_config.py  wandb_config.py
code/experiments/: adm.sh  augmentation.sh  baseline.sh  beta_schedule.sh  consistency.sh  ddim.sh  ddim_test.sh  ddpm.sh  debug.sh  dit.sh  dit_vae.sh  emre_tests_11_04.sh  increase_steps.sh  ldmp.sh  ldpm.sh  pipelines.sh  train.sh  vae.sh  vqvae.sh
code/models/: __init__.py  dit.py  transformer.py  transformer_2d.py  unet.py  unet_attention.py  unet_pp.py  unet_resnet.py  unet_with_pretrain.py  vae.py  vqmodel.py
code/pipelines/: base_pipeline.py  ccddpm_pipeline.py  class_dit.py  consistency.py  custom_pipelines.py  ddim.py  ddpm.py  dit.py  dit_vae.py  ldmp.py  ldpm.py  lora_inference.py  pndm.py  stable_diffusion.py  train_text_to_image_lora.py  unconditional_dit.py  vae_train.py  (+1 more)
codes/: Training_Diffusion_Models.ipynb  __init__.py
conf/: global_setting.py  model_config.py
paper/: diffusion_papers.tex
report/: Human Faces Generation with Diffusion Models.tex  references.bib
src/: FID_score.py  __init__.py  train.py
test/: __init__.py  test_DDIM.py  test_DiTPipeline.py  test_ScoreSdeVe.py  test_VQModel.py  test_ldpm.py  test_resize_image.py
(+180 files in other folders)
