[tool.poetry]
name = "faice"
version = "0.1.0"
description = "human face generation with diffusion models"
authors = ["frankcholula <lu.phrank@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "code" }
]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
numpy = "^2.2.1"
streamlit = "^1.41.1"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.6.0"
pillow = "^11.0.0"
pandas = "^2.2.3"
diffusers = "^0.32.2"
torchvision = "0.22.0"
datasets = "^3.3.2"
accelerate = "^1.4.0"
torchmetrics = {extras = ["image"], version = "^1.7.0"}
huggingface-hub = {extras = ["cli"], version = "^0.29.2"}
tensorboard = "^2.19.0"
wandb = "^0.19.8"
dotenv = "^0.9.9"
pytorch-fid = "^0.3.0"
clean-fid = "^0.1.35"
transformers = "4.49.0"
aiohttp = "^3.11.18"
lpips = "^0.1.4"
peft = "^0.15.2"
xformers = "^0.0.30"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
